--- a/index.html
+++ b/index.html
@@ -6,36 +6,187 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Portfolio Resume</title>
     <!-- Custom styles for this template -->
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand em-text" href="#">Project name</a>
+    <div class="container">
+        <section>
+            <img src="images/person.png" class="profile-img">
+            <header>
+                <h1>HELLO, <br> my name is <strong>Kurtis Pritchard</strong> and I am a web developer</h1>
+            </header>
+            <img src="images/line.png" class="line">
+            <div class="row">
+                <div class="col-md-7">
+                    <h2># About Me</h2>
+                    <p>
+                        Art party semiotics tumblr, viral meditation gastropub dreamcatcher aesthetic church-key kitsch DIY. Synth hella tilde distillery, drinking vinegar four dollar toast twee sartorial migas pork belly brooklyn master cleanse food truck helvetica shoreditch. Flexitarian forage hashtag shoreditch squid, paleo skateboard blog vinyl poutine synth post-ironic. Green juice organic disrupt, everyday carry single-origin coffee whatever thundercats pour-over knausgaard. YOLO before they sold out food truck, schlitz mixtape taxidermy bicycle rights chartreuse man bun normcore chicharrones. Try-hard bespoke leggings affogato, brooklyn kickstarter single-origin coffee occupy deep v umami lumbersexual pug scenester taxidermy mumblecore. Fingerstache small batch tumblr PBR&amp;B yr disrupt.
+                    </p>
+                </div>
+                <div class="col-md-5">
+                    <h2># Contact Info</h2>
+                    <ul class="contact-list">
+                        <li>
+                            <img src="images/phone.png"> (615) 635-1844
+                        </li>
+                        <li>
+                            <img src="images/email.png"> taotechsoftware@gmail.com
+                        </li>
+                        <li>
+                            <img src="images/facebook.png"> Facebook <span>facebook.com/kurtis.pritchard.3</span>
+                        </li>
+                        <li>
+                            <img src="images/phone.png"> Twitter <span>twitter.com/taotechsoftware</span>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </div><!--/.nav-collapse -->
+
+            <div class="row">
+                <div class="col-md-7">
+                    <h2># Education &amp; Experience</h2>
+                    <div class="media">
+                        <div class="media-left">
+                            2001-2005
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Valley High School</h4>
+                            <p>
+                                General Education
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="media">
+                        <div class="media-left">
+                            2016-2010
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">University of Tennessee</h4>
+                            <p>
+                                Mechanical and Aerospace Engineering
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="media">
+                        <div class="media-left">
+                            2011-2014
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Middle Tennessee University</h4>
+                            <p>
+                                Mathematics and Computer Science
+                            </p>
+                        </div>
+                    </div>
+
+                    <div class="media">
+                        <div class="media-left">
+                            2014-2016
+                        </div>
+                        <div class="media-body">
+                            <h4 class="media-heading">Software Developer</h4>
+                            <p>
+                                iOS, Android, React, React Native, and Web Development
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-5">
+                    <h2># Programming Skills</h2>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 100%;">
+                            Swift
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 80%;">
+                            Java
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 70%;">
+                            HTML
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 60%;">
+                            CSS
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 90%;">
+                            JavaScript
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 40%;">
+                            PHP
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-striped" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 50%;">
+                            SQL
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-7">
+                    <h2># Services</h2>
+                    <div class="alert alert-success" role="alert">
+                        <i class="glyphicon glyphicon-ok"></i> iOS Application Development (Swift)
+                    </div>
+                    <div class="alert alert-info" role="alert">
+                        <i class="glyphicon glyphicon-ok"></i> Android Application Development (Java)
+                    </div>
+                    <div class="alert alert-success" role="alert">
+                        <i class="glyphicon glyphicon-ok"></i> Web Application Development (React)
+                    </div>
+                    <div class="alert alert-info" role="alert">
+                        <i class="glyphicon glyphicon-ok"></i> Frontend Web Design (HTML, CSS, JavaScript)
+                    </div>
+                    <div class="alert alert-success" role="alert">
+                        <i class="glyphicon glyphicon-ok"></i> Backend Web Development (PHP, SQL)
+                    </div>
+                    <div class="alert alert-info" role="alert">
+                        <i class="glyphicon glyphicon-ok"></i> Graphic Design (Mobile, Web)
+                    </div>
+                </div>
+                <div class="col-md-5">
+                    <h2># Recent Projects</h2>
+                    <ul class="work-list">
+                        <li>
+                            <a href="#"><img src="images/work1.png"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/work2.png"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/work3.png"></a>
+                        </li>
+                        <li>
+                            <a href="#"><img src="images/work4.png"></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </div>
+
+    <footer>
+        <div class="container">
+            <p>
+                Copyright &copy; 2016 Kurtis Pritchard
+            </p>
         </div>
-    </nav>
-
-    <section>
-
-    </section>
+    </footer>
 
     <!-- Bootstrap core JavaScript -->
     <!-- Placed at the end of the document so the pages load faster -->
