--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="container container-main">
         <section>
             <img src="images/person.png" class="profile-img">
             <header>
-                <h1>HELLO, <br> my name is <strong>Kurtis Pritchard</strong> and I am a web developer</h1>
+                <h1>HELLO, <br> my name is <strong>Kurtis Pritchard</strong> and I am a software developer</h1>
             </header>
             <img src="images/line.png" class="line">
             <div class="row">
@@ -39,7 +39,7 @@
                             <img src="images/facebook.png"> Facebook <span>facebook.com/kurtis.pritchard.3</span>
                         </li>
                         <li>
-                            <img src="images/phone.png"> Twitter <span>twitter.com/taotechsoftware</span>
+                            <img src="images/twitter.png"> Twitter <span>twitter.com/taotechsoftware</span>
                         </li>
                     </ul>
                 </div>
